@@ -3,6 +3,7 @@
 
 Version 0.5.*:
 --------------
+2: Critical bugfix for read_annotate__diamond
 1: Developer version started, similar to 0.4
 
 Version 0.4: Release on 3.10.2025
